log/build_2023-10-20_00-13-33/fruit_detection/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/kaibuchisoma/robocon_ws/install/fruit_detection/lib/python3.10/site-packages/fruit_detection/pubdetect.py", line 230
    LOGGER.info("----------------------------------------------"))
                                                                 ^
SyntaxError: unmatched ')'

